@startuml parser_class
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam roundcorner 5
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 70

together {
    class Parser {
        {static} +parse(userInput: String): Command
    }
    interface Command <<interface>> {
        +execute(deckManager: DeckManager,\n  ui: Ui, in: Scanner): boolean
    }
}

together {
    class ArgumentExtractor {
        {static} +parseDeckArgs(arguments: String): DeckArgs
        {static} +parseAddCardArgs(arguments: String): AddCardArgs
        {static} +parseDeleteCardArgs(arguments: String): DeleteCardArgs
        {static} +parseEditCardArgs(arguments: String): EditCardArgs
    }
    class FlashException {
        -errorType: ErrorType
        +getErrorType(): ErrorType
    }
}

together {
    class AddCardArgs {
        -deckName: String
        -question: String
        -answer: String
    }
    class DeleteCardArgs {
        -deckName: String
        -cardIndex: int
    }
    class EditCardArgs {
        -deckName: String
        -cardIndex: int
        -question: String
        -answer: String
    }
    class DeckArgs {
        -deckName: String
    }
    enum ErrorType <<enumeration>> {
        DUPLICATE_PREFIX
        INVALID_ARGUMENTS
        INVALID_COMMAND
        INVALID_EDIT
        INVALID_INDEX
        MISSING_ANSWER
        MISSING_DECK
        MISSING_INDEX
        MISSING_QUESTION
        NULL_INPUT
    }
}

Parser --> "1" ArgumentExtractor : uses
Parser --> "0..1" Command : creates >
Parser .> "0..1" FlashException : throws >

ArgumentExtractor --> "0..1" AddCardArgs : creates >
ArgumentExtractor --> "0..1" DeleteCardArgs : creates >
ArgumentExtractor --> "0..1" EditCardArgs : creates >
ArgumentExtractor --> "0..1" DeckArgs : creates >
ArgumentExtractor .> "0..1" FlashException : throws >

FlashException *-- ErrorType : uses >
@enduml